feat(backend): Implement WebSockets for real-time chat
Integrates Socket.IO for real-time message handling between users. This change includes:
- Setting up the Socket.IO server.
- Handling socket connections, disconnections, and authentication using JWT.
- Broadcasting new messages to relevant participants.
- Adding real-time message display and sending functionality in the frontend ChatInterface.

Additionally, this commit includes:
- Updates to the `schema.sql` to include a `transactions` table and ensure correct drop order.
- Minor UI adjustments in `AuthScreens.tsx` for better responsiveness and navigation.
- Updates to `README.md` with a new AI Studio app link.
- Refactoring of server setup in `backend/server.js`, including Cloudinary configuration.

--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
     "url": "https://esm.sh/url@^0.11.4",
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.4",
     "stream": "https://esm.sh/stream@^0.0.3",
-    "cloudinary": "https://esm.sh/cloudinary@^2.9.0"
+    "cloudinary": "https://esm.sh/cloudinary@^2.9.0",
+    "util": "https://esm.sh/util@^0.12.5"
   }
 }
 </script>
